Update sqlite paramter usage

--- a/SunSync/SunSync/SunSync.csproj
+++ b/SunSync/SunSync/SunSync.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\SyncRecord.cs" />
     <Compile Include="Models\SyncSetting.cs" />
+    <Compile Include="Models\Tools.cs" />
     <Compile Include="Models\UploadInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
