--- a/SunSync/SunSync/SunSync.csproj
+++ b/SunSync/SunSync/SunSync.csproj
@@ -93,6 +93,7 @@
       <DependentUpon>AccountSettingPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\Account.cs" />
+    <Compile Include="Models\CachedHash.cs" />
     <Compile Include="Models\SyncRecord.cs" />
     <Compile Include="Models\SyncSetting.cs" />
     <Compile Include="Models\SystemConfig.cs" />
