--- a/SunSync/SunSync/SunSync.csproj
+++ b/SunSync/SunSync/SunSync.csproj
@@ -94,6 +94,7 @@
     </Compile>
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\CachedHash.cs" />
+    <Compile Include="Models\Log.cs" />
     <Compile Include="Models\SyncRecord.cs" />
     <Compile Include="Models\SyncSetting.cs" />
     <Compile Include="Models\SystemConfig.cs" />
