Add none check remote duplicate option Add skip by suffixes option Add skip by prefixes option

--- a/SunSync/SunSync/SunSync.csproj
+++ b/SunSync/SunSync/SunSync.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Models\FileUploader.cs" />
     <Compile Include="Models\Log.cs" />
     <Compile Include="Models\PutRet.cs" />
+    <Compile Include="Models\SyncLog.cs" />
     <Compile Include="Models\SyncRecord.cs" />
     <Compile Include="Models\SyncSetting.cs" />
     <Compile Include="Models\SystemConfig.cs" />
