add delete job function

--- a/SunSync/SunSync/SunSync.csproj
+++ b/SunSync/SunSync/SunSync.csproj
@@ -75,10 +75,10 @@
     <ApplicationIcon>sunsync.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>qiniu.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>sunsync.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup>
@@ -93,11 +93,12 @@
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
-  </PropertyGroup>
+  <PropertyGroup />
   <PropertyGroup>
     <SignManifests>false</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
@@ -216,7 +217,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
-    <None Include="qiniu.pfx" />
+    <None Include="sunsync.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Pictures\cloud.png" />
