优化上传文件之前的检查机制，界面元素小幅更新

--- a/SunSync/SunSync/SunSync.csproj
+++ b/SunSync/SunSync/SunSync.csproj
@@ -101,11 +101,13 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\..\qiniu-csharp-sdk\Qiniu\Qiniu\bin\x86\Release\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\qiniu-csharp-sdk\Qiniu\Qiniu\bin\x86\Debug\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Qiniu">
-      <HintPath>..\..\..\qiniu-csharp-sdk\Qiniu\Qiniu\bin\x86\Release\Qiniu.dll</HintPath>
+    <Reference Include="Qiniu, Version=1.2.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\qiniu-csharp-sdk\Qiniu\Qiniu\bin\x86\Debug\Qiniu.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -136,6 +138,7 @@
     </Compile>
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\CachedHash.cs" />
+    <Compile Include="Models\BucketFileInfo.cs" />
     <Compile Include="Models\FileUploader.cs" />
     <Compile Include="Models\Log.cs" />
     <Compile Include="Models\LogExporter.cs" />
