--- a/SunSync/SunSync.csproj
+++ b/SunSync/SunSync.csproj
@@ -103,11 +103,11 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\csharp-sdk\bin\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Qiniu">
-      <HintPath>..\..\csharp-sdk\bin\Qiniu.dll</HintPath>
+      <HintPath>..\..\csharp-sdk\src\Qiniu\bin\x64\Release\Qiniu.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
